2002-01-25  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_archive)  Collect information about
	neighboring messages when the archive-get-immediate command
	is used.
	(_lists) Fix typo.  Thanks to Roger Klorese.

	* lib/Mj/Archive.pm:  (get_neighbors)  Determine the next
	and previous messages within an archive for a particular
	message.

	* lib/Mj/Format.pm:  (archive)  Add message-specific formatting
	for the archive-get-immediate command.

	* lib/Mj/List.pm:   (archive_get_neighbors)  Add a wrapper
	for Mj::Archive::get_neighbors().

	* lib/Mj/Resend.pm:  (_post)  Change the ARCHIVE substitution
	to ARCNO.

2002-01-21  Jason Tibbitts  <tibbs@math.uh.edu>

	* setup/ask_basic.pl (ask_basic): Ask for majordomo.cf location.

	* postinstall: Add mj_setup.

	* installbin: Add CONFFILE substitution.

	* Makefile.PL: Bump config version.  Add mj_setup.

	* bin/mj_setup: New file.

2002-01-20  Jason Tibbitts  <tibbs@math.uh.edu>

	* bin/mj_shell: Delay module loading until runtime.
	Add -W option, load and import Carp at runtime, and fixup warnings
	to spit out a backtrace.
	

2002-01-19  Jason L Tibbitts III  <tibbs@math.uh.edu>

	Add Encoding=>'8bit' to generated MIME Entities:
	* bin/mj_email (parse_commands)
	* bin/mj_queuerun (parse_commands)
	* lib/Mj/Digest/Text.pm (new)
	* lib/Mj/Digest/MIME.pm (new, add, done)
	* lib/Mj/Digest/Index.pm (done)
	* lib/Mj/Token.pm (confirm, t_accept)
	* lib/Mj/Resend.pm (post, _post, _add_fters)
	* lib/Mj/Parser.pm (parse_entity, parse_part)
	* lib/Mj/MailOut.pm (welcome)
	* lib/Mj/BounceHandler.pm (handle_bounce_message, handle_bounce_token)
	* lib/Mj/Access.pm (_a_forward)
	* lib/Majordomo.pm (reject, tokeninfo_start)
	
	* lib/Mj/Addr.pm (_validate): Accept dots in the phrase portion of
	a route address.

2002-01-18  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Add support for the archive command.

	* lib/Majordomo.pm:  (_lists)  Determine if access to the
	archive command is allowed, and store the result in the