@@ -1,3 +1,9 @@
+2002-02-03  Jason Tibbitts  <tibbs@math.uh.edu>
+
+	* lib/Mj/Config.pm (parse_taboo_body, parse_taboo_headers): Escape
+	backslashes and	single quotes present in the "just for display"
+	pattern in order to prevent lots of warnings.
+
 2002-01-25  Michael Yount <csf@moscow.com>
 
 	* lib/Majordomo.pm:  (_archive)  Collect information about
